Fix the font size of code sample on safari #5513

--- a/src/BlazorUI/Demo/Client/Core/Components/ComponentExampleBox.razor.scss
+++ b/src/BlazorUI/Demo/Client/Core/Components/ComponentExampleBox.razor.scss
@@ -38,6 +38,10 @@
     position: relative;
     min-height: rem2(70px);
     box-sizing: border-box;
+
+    .code {
+        -webkit-text-size-adjust: none;
+    }
 }
 
 .example-container {
